fix: editLink is no longer overflowing

--- a/src/assets/styles/ckeditor.css
+++ b/src/assets/styles/ckeditor.css
@@ -1,5 +1,5 @@
 :root {
-	--ck-spacing-standard: 0;
+	--ck-spacing-standard: 0 !important;
 }
 
 .ck-content .table {
